updated the scrolling.... does it work?

--- a/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Classes/TODO.txt
+++ b/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Classes/TODO.txt
@@ -2,3 +2,4 @@
 -send orders to receipts
 -remove tabs during session
 -send back to welcome screen if no existing tabs
+-find better way to deal with closing the session
