Screen gets grayed out behind the dialog boxes

--- a/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Classes/TODO.txt
+++ b/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Classes/TODO.txt
@@ -3,3 +3,4 @@
 -remove tabs during session
 -send back to welcome screen if no existing tabs
 -find better way to deal with closing the session
+-help screen is messed up
